<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Thrsday"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="@+id/button42"
        app:layout_constraintStart_toStartOf="@+id/button42" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Friday"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="@+id/button52"
        app:layout_constraintStart_toEndOf="@+id/button42" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Wednesday"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView3"
        app:layout_constraintEnd_toStartOf="@+id/button42"
        app:layout_constraintStart_toEndOf="@+id/button22" />

    <Button
        android:id="@+id/button44"
        android:layout_width="72dp"
        android:layout_height="100dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/button_grand"
        android:onClick="button44"
        android:text="@string/nine"
        app:layout_constraintStart_toEndOf="@+id/button33"
        app:layout_constraintTop_toBottomOf="@+id/button33" />

    <Button
        android:id="@+id/button"
        android:layout_width="72dp"
        android:layout_height="100dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/button_grand"
        android:text="事服值班"
        app:layout_constraintStart_toEndOf="@+id/button33"
        app:layout_constraintTop_toBottomOf="@+id/button42" />

    <Button
        android:id="@+id/button41"
        android:layout_width="72dp"
        android:layout_height="100dp"
        android:layout_marginBottom="4dp"
        android:background="@drawable/button_grand"
        android:onClick="button41"
        android:text="@string/six"
        app:layout_constraintBottom_toTopOf="@+id/button42"
        app:layout_constraintEnd_toEndOf="@+id/button42" />

    <Button
        android:id="@+id/button33"
        android:layout_width="72dp"
        android:layout_height="100dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/button_grand"
        android:onClick="button33"
        android:text="@string/five"
        app:layout_constraintStart_toStartOf="@+id/button32"
        app:layout_constraintTop_toBottomOf="@+id/button32" />

    <Button
        android:id="@+id/button23"
        android:layout_width="72dp"
        android:layout_height="100dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/button_grand"
        android:onClick="button23"
        android:text="@string/six"
        app:layout_constraintStart_toStartOf="@+id/button22"
        app:layout_constraintTop_toBottomOf="@+id/button22" />

    <Button
        android:id="@+id/button24"
        android:layout_width="72dp"
        android:layout_height="100dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/button_grand"
        android:onClick="button24"
        android:text="@string/seven"
        app:layout_constraintStart_toStartOf="@+id/button23"
        app:layout_constraintTop_toBottomOf="@+id/button23" />

    <Button
        android:id="@+id/button15"
        android:layout_width="72dp"
        android:layout_height="100dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/button_grand"
        android:onClick="button15"
        android:text="@string/four"
        app:layout_constraintEnd_toStartOf="@+id/button24"
        app:layout_constraintTop_toBottomOf="@+id/button24" />

    <Button
        android:id="@+id/button13"
        android:layout_width="72dp"
        android:layout_height="100dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/button_grand"
        android:onClick="button13"
        android:text="@string/three"
        app:layout_constraintStart_toStartOf="@+id/button12"
        app:layout_constraintTop_toBottomOf="@+id/button12" />

    <Button
        android:id="@+id/button11"
        android:layout_width="72dp"
        android:layout_height="100dp"
        android:layout_marginBottom="4dp"
        android:background="@drawable/button_grand"
        android:onClick="button11"
        android:text="@string/one"
        app:layout_constraintBottom_toTopOf="@+id/button12"
        app:layout_constraintStart_toStartOf="@+id/button12" />

    <Button
        android:id="@+id/button21"
        android:layout_width="72dp"
        android:layout_height="100dp"
        android:layout_marginBottom="4dp"
        android:background="@drawable/button_grand"
        android:onClick="button21"
        android:text="@string/five"
        app:layout_constraintBottom_toTopOf="@+id/button22"
        app:layout_constraintStart_toEndOf="@+id/button15" />

    <Button
        android:id="@+id/button22"
        android:layout_width="72dp"
        android:layout_height="100dp"
        android:layout_marginEnd="4dp"
        android:background="@drawable/button_grand"
        android:onClick="button22"
        android:text="@string/four"
        app:layout_constraintEnd_toStartOf="@+id/button32"
        app:layout_constraintTop_toTopOf="@+id/button32" />

    <Button
        android:id="@+id/button12"
        android:layout_width="72dp"
        android:layout_height="100dp"
        android:layout_marginEnd="4dp"
        android:background="@drawable/button_grand"
        android:onClick="button12"
        android:text="@string/two"
        app:layout_constraintEnd_toStartOf="@+id/button22"
        app:layout_constraintTop_toTopOf="@+id/button22" />

    <Button
        android:id="@+id/button42"
        android:layout_width="72dp"
        android:layout_height="100dp"
        android:layout_marginStart="4dp"
        android:background="@drawable/button_grand"
        android:onClick="button42"
        android:text="@string/eight"
        app:layout_constraintStart_toEndOf="@+id/button32"
        app:layout_constraintTop_toTopOf="@+id/button32" />

    <Button
        android:id="@+id/button52"
        android:layout_width="72dp"
        android:layout_height="100dp"
        android:layout_marginStart="4dp"
        android:background="@drawable/button_grand"
        android:onClick="button52"
        android:text="@string/ten"
        app:layout_constraintStart_toEndOf="@+id/button42"
        app:layout_constraintTop_toTopOf="@+id/button42" />

    <Button
        android:id="@+id/button32"
        android:layout_width="72dp"
        android:layout_height="100dp"
        android:layout_marginTop="164dp"
        android:onClick="button32"
        android:text="@string/three"
        android:background="@drawable/button_grand"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button73"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/button_grand"
        android:onClick="button73"
        android:text="@string/eleven"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.544"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button15" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/Monday"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/button11"
        app:layout_constraintEnd_toEndOf="@+id/button15"
        app:layout_constraintStart_toStartOf="@+id/button15" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Thuesday"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="@+id/button21"
        app:layout_constraintStart_toEndOf="@+id/button15" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="TextView"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.755"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button44" />

    <Button
        android:id="@+id/button2"
        android:layout_width="30dp"
        android:layout_height="wrap_content"
        android:onClick="weeknum_down"
        android:text="-"
        app:layout_constraintBottom_toBottomOf="@+id/textView8"
        app:layout_constraintEnd_toStartOf="@+id/textView8"
        app:layout_constraintTop_toTopOf="@+id/textView8" />

    <Button
        android:id="@+id/button3"
        android:layout_width="30dp"
        android:layout_height="wrap_content"
        android:onClick="weeknum_up"
        android:text="+"
        app:layout_constraintBottom_toBottomOf="@+id/textView8"
        app:layout_constraintStart_toEndOf="@+id/textView8"
        app:layout_constraintTop_toTopOf="@+id/textView8" />

    <Switch
        android:id="@+id/switch2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="switch_button"
        android:text="隐藏的课"
        app:layout_constraintEnd_toEndOf="@+id/textView8"
        app:layout_constraintStart_toStartOf="@+id/textView8"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

</androidx.constraintlayout.widget.ConstraintLayout>